--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -36,6 +36,12 @@
       <a href="https://www.xing.com/profile/{{ sidebar.xing }}" target="_blank">{{ sidebar.xing }}</a>
     </li>
     {% endif %}
+    
+    {% if sidebar.stackshare %}
+    <li class="xing"><i class="fab fa-xing"></i>
+      <a href="https://stackshare.io/{{ sidebar.stackshare }}" target="_blank">{{ sidebar.xing }}</a>
+    </li>
+    {% endif %}
 
     {% if sidebar.github %}
     <li class="github"><i class="fab fa-github"></i>
