--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -39,7 +39,7 @@
     
     {% if sidebar.stackshare %}
     <li class="xing"><i class="fab fa-xing"></i>
-      <a href="https://stackshare.io/{{ sidebar.stackshare }}" target="_blank">{{ sidebar.xing }}</a>
+      <a href="https://stackshare.io/{{ sidebar.stackshare }}" target="_blank">{{ sidebar.stackshare }}</a>
     </li>
     {% endif %}
 
