--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -16,12 +16,12 @@
     <div class="item">
 
       <h3 class="level-title">{{ skill.name }}</h3>
-      <h2>{{ skill.name }}</h3>
+      <h5>{{ skill.detail }}</h3>
 
 <!--       <div class="level-bar">
         <div class="level-bar-inner" data-level="{{ skill.level }}">
         </div>
-      </div><!--//level-bar--> -->
+      </div> -->
 
     </div><!--//item-->
     {% endfor %}
