--- a/_includes/certifications.html
+++ b/_includes/certifications.html
@@ -1,5 +1,5 @@
-{% assign projects = site.data.data.certifications %}
-{% if projects %}
+{% assign certifications = site.data.data.certifications %}
+{% if certifications %}
 <section class="section projects-section">
 
   <h2 class="section-title">
