--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,7 +4,7 @@
   <div class="profile-container">
 
     {% if sidebar.name %}
-    <!-- <img class="avatar" src="{{ site.baseurl }}/assets/images/{{ sidebar.avatar }}" alt="profile picture" />-->
+    <!-- <img class="avatar" src="{{ site.baseurl }}/assets/images/{{ sidebar.avatar }}" alt="profile picture" /> -->
     {% endif %}
 
     {% if sidebar.name %}
@@ -27,7 +27,8 @@
   {% include interests.html %}
 
   {% if sidebar.about %}
-    <!--{% include about.html %} -->
+    <!-- {% include about.html %} -->
   {% endif %}
 
-</div><!--//sidebar-wrapper-->
+</div>
+<!--//sidebar-wrapper-->
